--- a/Project 4.html
+++ b/Project 4.html
@@ -37,7 +37,7 @@
         </nav>
      
         <!-- Page Header-->
-        <header class="masthead" style="background-image: url('https://www.mcgawgraphics.com/cdn/shop/products/v1738_1024x1024.jpg?v=1599050216')">
+        <header class="masthead" style="background-image: url('https://upload.wikimedia.org/wikipedia/commons/c/ca/Vincent_van_Gogh_-_Sunflowers_%28Metropolitan_Museum_of_Art%29.jpg')">
             <div class="container position-relative px-4 px-lg-5">
                 <div class="row gx-4 gx-lg-5 justify-content-center">
                     <div class="col-md-10 col-lg-8 col-xl-7">
