--- a/Project 4.html
+++ b/Project 4.html
@@ -64,47 +64,51 @@
                         
 
                         <p>
-                       Learning to solder was an unexpectedly rewarding experience! It had always felt a lot harder than it wound up being, breaking down a mental barrier to creating which I didn’t even realize was there. I also found the hands-on nature of soldering really enjoyable -- it tapped into the same mental toolkit I use when making visual art. Also, seeing all the electronic parts up close made me rather interested in computer anatomy; I’ve now downloaded a few lectures on the subject.
+                     Asa and I worked together on this project! We started by scaling the files by 150% in prusaslicer, using no supports when printing.
 <p>
 </p>
-Initially, the clock didn’t work. It would light up incorrectly and make a squealing sound as soon as it was plugged in. But, in my opinion, this was for the best! It gave me the opportunity to learn about different failure modes! Since we misdiagnosed the issue a few times, I wound up inspecting it for multiple problems, making me better prepared for future work!
+We divided the work based on availability -- Asa had to miss a few classes for the holidays, and I slept through one. As a result, I printed most of the hand, then he assembled the majority of it, leaving the last 2 fingers for me to string on and attach the tensioner pin for. Printing it was a bit of a pain. I initially tried to print it in the makerlab, but it kept failing, so I went to office hours instead. I thought that the assembly process wasn’t too bad - there were a solid number of pretty comprehensive guides online, like this one [link XXX], which was a whole hour and a half long.
+
 
                    </p>
+                   <p>
+                    Here are some of the photos of the finished hand:
+</p>
 
                    <p>
 <a href="#!"><img class="img-fluid" src="assets/img/soldering.jpg" alt="..." /></a>
-<span class="caption text-muted">Some soldering photos - genuinely so proud :)</span>
+<span class="caption text-muted">(I realized after I uploaded these that these photos are from before I added the finger covers! Oops!! You can see them later on, though!)
+
+</span>
 </p>
 </p>
 <p>
 
 
-Before getting started, I took measurements of my clock. Initially, my notes were pretty messy, I wrote them a few different ways - here’s an example of how it evolved! The first image has a design for the board, and one of a lid design. The second just has the board. For context, I actually kept the styrofoam from the soldering kit to use as a supportive backing in the box - this can be seen on the right of the board in the second image.
+Thinking about modifications was interesting. I started by trying to use the hand for a variety of things - turning pages, drinking water, writing. I figured that as I wasn’t able to consult someone who had an upper limb difference, simulating the use of the product myself was the least I could do.
+
+
+</p>
+
+<p>
+Initially, I considered adding some type of hole where you could insert a writing utensil and tried to think of a few potential mechanisms to hold it in place.  I knew that I wanted to add something which blended into the form nicely rather than being a separate attachment which stuck out from the body. I identified a few places where there seemed to be unused space, and this was a potential. The reason I had been trying to find a place to insert a pen rather than just gripping it with the hand was that it seemed like it would be easier to control a writing utensil closer to the body, rather than extended further away. But, after thinking about different places one could place a pencil, I realized that just holding it with the hand seemed easier. 
+
 
 </p>
 <p>
-<a href="#!"><img class="img-fluid" src="assets/img/3img2.jpg" alt="..." /></a>
+Except for one major problem. The pen kept slipping! I didn’t think that it was because of the grip of the fingers, which seemed fine. Instead, I identified the issue to be the palm - totally smooth and flat, it was entirely unable to hold onto anything.
+
+
+
+</p>
+
+<p>
+I thought that there would be 2 things which could help with this: squish and grip. Only a small amount of the surface area of the pen were in contact with the palm, making it much slippier, too unstable to write with. If one could increase the softness of the palm such that one could squish the pen into it, it would be a lot more stable. In addition, increasing the friction of the surface would help - the smooth PLA had very little friction.
+
 
 </p>
 <p>
-For the first box, we chose to do the work independently, but met up outside of class to work on it together. I think that this led to a better learning outcome than potential alternatives. As we both had to make our own boxes, we each got to learn fusion ourselves, without one person taking over the work. But, we were still able to help one another through the process and compare designs.
-
-</p>
-<p>
-
-The first box didn’t work because I mistyped a measurement -- 50 instead of 55. Lesson has been learned - double check the numbers! The second one worked great, though. The tolerance was tight, and the lid perfectly slotted into place. (Interestingly, while I didn’t change anything between the lid design of the second and third boxes, the third’s was a bit looser, and didn’t ‘click’ into place quite as perfectly.) Then, I decided to make a third design, adding buttons, which worked wonderfully. (Makes a fabulous little click!)
-
-</p>
-<p>
-<a href="#!"><img class="img-fluid" src="assets/img/3img3.jpg" alt="..." /></a>
-
-</p>
-<p>
-When it comes to the printing, I accidentally allowed it to have supports inside the box - this was kinda annoying to get rid of, and I’ll change the settings next time. For some reason, this was only an issue on my last print. Besides that, it worked great. I also set my top contact z distance to .3 and used organic supports.
-
-</p>
-<p>
-Now, to the next set of boxes! The first box that I laser cut actually worked perfectly! Well.. except for the fact that I forgot to add a bottom - it only had sides. But, I found it aesthetically appealing, and even though I added some little support triangles to keep it standing, it didn’t wind up needing them! It also had some sections where the material was really thin. I dropped it, and one of those sections broke, and the box no longer fit together. I adore making art with the constraint of using “trash,” so I decided to make the unused pieces of the box into the following little guy! I call him Phreaky Phil, as he's such a cute little eldritch being. I include this photo for two reasons: first, I forgot to take a photo of the initial box. This is the primary reason. Second, I thought it related to our discussions about reuse! I got to give these scraps a new life, albeit in a not particularly environmentally friendly way, given all the superglue I used. My first thought after making him was that I might try to make a fully compostable piece using laser cut MDF, as it was such a fun medium, but it’s apparently made with a formaldehyde-based resin. Side note: I’m not actually certain if we used MDF. I think it was, but if not, ignore this section, I suppose. Apparently, this leads to a solid number of issues. This makes it not particularly compostable, given that formaldehyde is a known carcinogen. Additionally, formaldehyde continues to offgas for a really long time - for this reason, and since MDF is susceptible to water, it’s often recommended that MDF is painted to seal it in. MDF also releases VOCs for at least the first few months after manufacture. I find this rather sad - we’re turning all this biodegradable wood into something that will wind up in a landfill. At least it can be recycled into more MDF? I'm appreciating learning more about common materials - it's very interesting.
+Specifically, I think it would make sense to use a similar grip tape to the one that my contact staff uses. It’s squishy, going about as far out as my final sketches show, and it’s also relatively grippy. It’s not outright rubbery, but feels similar to a human palm. Here is a (rather low res) image of it:
 </p>
 <p>
    <a href="#!"><img class="img-fluid" src="assets/img/3img4.jpg" alt="..." /></a>
@@ -112,8 +116,7 @@ Now, to the next set of boxes! The first box that I laser cut actually worked pe
 </p> 
 <p>
 
-Anyways! Onto my second iteration. Here, I added a base and took away the support triangles. I also moved the place for the a plug just a bit. I’m very happy with my final design. It balances nicely, looks cute, and the buttons from my 3d printed box fit into it perfectly!</p>
-
+I quickly tested the squish idea by putting my sweatshirt on the palm and writing with the pen between the thumb and palm with the sweatshirt layer. This partially tested increasing friction, as the friction of this material is higher than that of smooth plastic, but it didn’t have nearly as much friction as would have been possible with proper grip. Instead, this mostly tested squish, increasing the surface area in contact with the pen! Lo and behold, it was drastically easier to write with! See the following images:
  
 <p>
    <a href="#!"><img class="img-fluid" src="assets/img/3img5.jpg" alt="..." /></a>
@@ -121,11 +124,14 @@ Anyways! Onto my second iteration. Here, I added a base and took away the suppor
 </p> 
 
 <p>
-Then.. I plugged it in. After completing this write-up, I realized I hadn’t gotten a photo of the clock both on and in the completed box. So, I plugged it in! But, it had a similar error as the one I originally had - lit up only partially, in red (I’m not sure if that’s the color it’s meant to be), and started squealing. I’ll probably go to an office hours session sometime soon to fix it and update my website. But, for now, the site will remain without a plugged in, finished photo. 
+The contrast is striking - while my handwriting isn’t great in any case, there is a large improvement between using the typical palm and using the sweatshirt as a buffer! You can write darker and with much more control. :D 
 </p>
 <p>
 
-One last thing to note! The only thing I do regret: not adding engravings to my 2nd (or even first) cut. I find myself almost irrationally icked out by wasting material, so I didn’t want to add engravings and then cut again. I wish I had gone for my ambitions originally - I don’t think anything would have gone wrong in a way which wasn’t a learning opportunity!
+So, I sketched out my solution on paper and in CAD like so:
+
+
+
 </p>
 <p>
     Summary: learned a lot, yay :D 
