--- a/Project 4.html
+++ b/Project 4.html
@@ -5,7 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
         <meta name="description" content="" />
         <meta name="author" content="" />
-        <title> 3 </title>
+        <title> 4 :) </title>
         <link rel="icon" type="image/x-icon" href="assets/favicon.ico" />
         <!-- Font Awesome icons (free version)-->
         <script src="https://use.fontawesome.com/releases/v6.3.0/js/all.js" crossorigin="anonymous"></script>
@@ -76,7 +76,7 @@ We divided the work based on availability -- Asa had to miss a few classes for t
 </p>
 
                    <p>
-<a href="#!"><img class="img-fluid" src="assets/img/soldering.jpg" alt="..." /></a>
+<a href="#!"><img class="img-fluid" src="assets/img/5 handwriting.jpg" alt="..." /></a>
 <span class="caption text-muted">(I realized after I uploaded these that these photos are from before I added the finger covers! Oops!! You can see them later on, though!)
 
 </span>
