--- a/Project 4.html
+++ b/Project 4.html
@@ -118,8 +118,9 @@ Specifically, I think it would make sense to use a similar grip tape to the one 
 
 I quickly tested the squish idea by putting my sweatshirt on the palm and writing with the pen between the thumb and palm with the sweatshirt layer. This partially tested increasing friction, as the friction of this material is higher than that of smooth plastic, but it didn’t have nearly as much friction as would have been possible with proper grip. Instead, this mostly tested squish, increasing the surface area in contact with the pen! Lo and behold, it was drastically easier to write with! See the following images:
  
-<p>
-   <a href="#!"><img class="img-fluid" src="assets/img/3img5.jpg" alt="..." /></a>
+<p><a href="#!"><img class="img-fluid" src="assets/img/5 handwriting.jpg" alt="..." /></a>
+<span class="caption text-muted">
+   <a href="#!"><img class="img-fluid" src="assets/img/5 sweatshirt.jpg" alt="..." /></a>
 
 </p> 
 
