--- a/Project 4.html
+++ b/Project 4.html
@@ -76,7 +76,7 @@ We divided the work based on availability -- Asa had to miss a few classes for t
 </p>
 
                    <p>
-<a href="#!"><img class="img-fluid" src="assets/img/5 handwriting.jpg" alt="..." /></a>
+<a href="#!"><img class="img-fluid" src="assets/img/5 hand.jpg" alt="..." /></a>
 <span class="caption text-muted">(I realized after I uploaded these that these photos are from before I added the finger covers! Oops!! You can see them later on, though!)
 
 </span>
