--- a/Project 4.html
+++ b/Project 4.html
@@ -111,7 +111,7 @@ I thought that there would be 2 things which could help with this: squish and gr
 Specifically, I think it would make sense to use a similar grip tape to the one that my contact staff uses. It’s squishy, going about as far out as my final sketches show, and it’s also relatively grippy. It’s not outright rubbery, but feels similar to a human palm. Here is a (rather low res) image of it:
 </p>
 <p>
-   <a href="#!"><img class="img-fluid" src="assets/img/3img4.jpg" alt="..." /></a>
+   <a href="#!"><img class="img-fluid" src="assets/img/5 foam.png" alt="..." /></a>
    <span class="caption text-muted">Phriendly Phil</span>
 </p> 
 <p>
