--- a/Project 4.html
+++ b/Project 4.html
@@ -67,7 +67,7 @@
                      Asa and I worked together on this project! We started by scaling the files by 150% in prusaslicer, using no supports when printing.
 <p>
 </p>
-We divided the work based on availability -- Asa had to miss a few classes for the holidays, and I slept through one. As a result, I printed most of the hand, then he assembled the majority of it, leaving the last 2 fingers for me to string on and attach the tensioner pin for. Printing it was a bit of a pain. I initially tried to print it in the makerlab, but it kept failing, so I went to office hours instead. I thought that the assembly process wasn’t too bad - there were a solid number of pretty comprehensive guides online, like this one [link XXX]<a href="https://www.youtube.com/watch?v=CXoVSTgzyec">this one</a>, which was a whole hour and a half long.
+We divided the work based on availability -- Asa had to miss a few classes for the holidays, and I slept through one. As a result, I printed most of the hand, then he assembled the majority of it, leaving the last 2 fingers for me to string on and attach the tensioner pin for. Printing it was a bit of a pain. I initially tried to print it in the makerlab, but it kept failing, so I went to office hours instead. I thought that the assembly process wasn’t too bad - there were a solid number of pretty comprehensive guides online, like this one [link XXX]<a href="https://www.youtube.com/watch?v=CXoVSTgzyec">&lt;this one></a>, which was a whole hour and a half long.
 
 
                    </p>
