--- a/Project 4.html
+++ b/Project 4.html
@@ -130,11 +130,12 @@ The contrast is striking - while my handwriting isn’t great in any case, there
 
 So, I sketched out my solution on paper and in CAD like so:
 
-
+  <a href="#!"><img class="img-fluid" src="assets/img/5 final.jpg" alt="..." /></a>
+   
 
 </p>
 <p>
-    Summary: learned a lot, yay :D 
+It was fun messing around with this. :)
 </p>    
 
 
