--- a/Project 4.html
+++ b/Project 4.html
@@ -89,19 +89,19 @@ Thinking about modifications was interesting. I started by trying to use the han
 </p>
 
 <p>
-Initially, I considered adding some type of hole where you could insert a writing utensil and tried to think of a few potential mechanisms to hold it in place.  I knew that I wanted to add something which blended into the form nicely rather than being a separate attachment which stuck out from the body. I identified a few places where there seemed to be unused space, and this was a potential. The reason I had been trying to find a place to insert a pen rather than just gripping it with the hand was that it seemed like it would be easier to control a writing utensil closer to the body, rather than extended further away. But, after thinking about different places one could place a pencil, I realized that just holding it with the hand seemed easier. 
+Initially, I considered adding some type of hole where you could insert a writing utensil and tried to think of a few potential mechanisms to hold it in place.  I knew that I wanted to add something which blended into the form nicely rather than being a separate attachment which stuck out from the body. I identified a few places where there seemed to be unused space, and a pen sticking through the hand's body wouldn't be problematic. The reason I had been trying to find a place to insert a pen rather than just gripping it with the hand was that it seemed like it would be easier to control a writing utensil closer to the body, rather than extended further away. But, after thinking about different places one could place a pencil, I realized that just holding it with the hand was likely easier. 
 
 
 </p>
 <p>
-Except for one major problem. The pen kept slipping! I didn’t think that it was because of the grip of the fingers, which seemed fine. Instead, I identified the issue to be the palm - totally smooth and flat, it was entirely unable to hold onto anything.
+Except for one major problem. The pen kept slipping! I didn’t think that it was because of the grip of the fingers, which seemed fine. Instead, I identified the issue to be the palm - totally smooth and flat, it was very challenging to hold onto small things.
 
 
 
 </p>
 
 <p>
-I thought that there would be 2 things which could help with this: squish and grip. Only a small amount of the surface area of the pen were in contact with the palm, making it much slippier, too unstable to write with. If one could increase the softness of the palm such that one could squish the pen into it, it would be a lot more stable. In addition, increasing the friction of the surface would help - the smooth PLA had very little friction. 
+I thought of 2 things to help with this: squish and grip. Only a small amount of the surface area of the pen were in contact with the palm, as it was very hard, making it much slippier and too unstable to write with. If one could increase the softness of the palm such that one could squish the pen into it, it would be a lot more stable. In addition, increasing the friction of the surface would help - the smooth PLA had very little friction. 
 
 
 </p>
@@ -114,7 +114,7 @@ Specifically, I think it would make sense to use a similar grip tape to the one 
 </p> 
 <p>
 
-I quickly tested the squish idea by putting my sweatshirt on the palm and writing with the pen between the thumb and palm with the sweatshirt layer. This partially tested increasing friction, as the friction of this material is higher than that of smooth plastic, but it didn’t have nearly as much friction as would have been possible with proper grip. Instead, this mostly tested squish, increasing the surface area in contact with the pen! Lo and behold, it was drastically easier to write with! See the following images:
+I quickly tested the squish idea by putting my sweatshirt on the palm and writing with the pen between the thumb and palm with the sweatshirt layer. This partially increased friction, as the friction of this material is higher than that of smooth plastic, but it didn’t have nearly as much friction as would have been possible with proper grip. So, it mainly tested squish, increasing the surface area in contact with the pen! Lo and behold, it was drastically easier to write with! See the following images:
  
 
    <a href="#!"><img class="img-fluid" src="assets/img/5 sweatshirt.jpg" alt="..." /></a>
