--- a/Project 4.html
+++ b/Project 4.html
@@ -62,7 +62,7 @@
                         
 
                         <p>
-                     Asa and I worked together on this project! We started by scaling the files by 150% in prusaslicer, using no supports when printing.
+                     Asa and I worked together on this project! We started by scaling the files by 150% in prusaslicer, using no supports when printing. Alas, I don't have any photos of the settings, but we set it to 30-40% infill!
 <p>
 </p>
 We divided the work based on availability -- Asa had to miss a few classes for the holidays, and I slept through one. As a result, I printed most of the hand, then he assembled the majority of it, leaving the last 2 fingers for me to string on and attach the tensioner pin for. Printing it was a bit of a pain. I initially tried to print it in the makerlab, but it kept failing, so I went to office hours instead. I thought that the assembly process wasn’t too bad - there were a solid number of pretty comprehensive guides online, like <a href="https://www.youtube.com/watch?v=CXoVSTgzyec">&lt;this one></a>, and I found one which which was a whole hour and a half long.
@@ -136,7 +136,16 @@ So, I sketched out my solution on paper and in CAD like so:
 <p>
 </p>
 <p>
-It was fun messing around with this. :)
+While useful for writing, the great thing about this modification is that it's generalizable, which is why I finally settled on it! I think this modification would benefit the user experience in handling many different types of objects. One potential issue is that it would trap too much heat -- I assume that this is the reason for the holes on the bottom -- but hopefully, creating holes in the foam could alleviate that issue.
+</p>
+
+<P>
+I think it isn't a great solution for writing for a long period of time - there are more minimal prostheses that could likely do this with less strain (Hendren talked about specialized, relatively cheap prostheses aimed towards this). But, this makes it an option, if one cannot write with their other hand. Rather than changing prostheses or having to think much at all, one can now fluidly grab a pen and write a quick note much easier than before.
+</P>
+<p>
+I remember Hendren discussing the role of prostheses in everyday life. She mentioned one woman's experience, where her incredibly expensive prosthetic arm was left unused, as it simply didn't suit her needs. As Hendren wrote, "In its attempt to mimic all handlike tasks, at least theoretically, it ended up fitting none precisely enough." I worry about this in the Phoenix V3 Hand. It just.. looks so much like a full hand. And I'm skeptical that what appears to be a typical hand is an especially well functioning form for a prosthetic hand. It’s aiming to look close to a typical hand while also being as functional as possible. I wonder what sacrifices there might be in favor of looking normal.
+</p><p>
+All in all, this was an interesting exercise in thinking about design justice. We didn’t have anyone with upper limb differences to give input, so we wound up just thinking about it all ourselves, kinda the opposite as to what we’ve discussed in class. I think that because we didn’t have input from someone consistently using this, we likely missed a lot of low-hanging fruit for how to improve its functionality and comfort. But, it was fun messing around with this. I think the readings and this project will definitely inform how I think about disability and how humans interface with the world. :)
 </p>    
 
 
