--- a/Project 4.html
+++ b/Project 4.html
@@ -132,6 +132,10 @@ So, I sketched out my solution on paper and in CAD like so:
 </p><p>
 </p>
   <a href="#!"><img class="img-fluid" src="assets/img/5 final.jpg" alt="..." /></a> 
+  <span class="caption text-muted">Sketch and final model!
+ 
+</span>
+
       
 <p>
 </p>
