--- a/Project 4.html
+++ b/Project 4.html
@@ -118,8 +118,10 @@ I quickly tested the squish idea by putting my sweatshirt on the palm and writin
  
 
    <a href="#!"><img class="img-fluid" src="assets/img/5 sweatshirt.jpg" alt="..." /></a>
+     <span class="caption text-muted">Sweatshirt simple prototype
    <p><a href="#!"><img class="img-fluid" src="assets/img/5 handwriting.jpg" alt="..." /></a>
 <span class="caption text-muted">
+      <span class="caption text-muted">Woahhh it worked :))
 
 </p> 
 
