--- a/Project 4.html
+++ b/Project 4.html
@@ -110,7 +110,7 @@ Specifically, I think it would make sense to use a similar grip tape to the one 
 </p>
 <p>
    <a href="#!"><img class="img-fluid" src="assets/img/5 foam.jpg" alt="..." /></a>
-   
+        <span class="caption text-muted">Staff :)
 </p> 
 <p>
 
