--- a/Project 4.html
+++ b/Project 4.html
@@ -118,7 +118,7 @@ I quickly tested the squish idea by putting my sweatshirt on the palm and writin
  <p></p>
 
    <a href="#!"><img class="img-fluid" src="assets/img/5 sweatshirt.jpg" alt="..." /></a>
-     <span class="caption text-muted">Sweatshirt simple prototype 
+     <span class="caption text-muted">Sweatshirt simple prototype </span>
    <p><a href="#!"><img class="img-fluid" src="assets/img/5 handwriting.jpg" alt="..." /></a>
 <span class="caption text-muted">
       <span class="caption text-muted">Woahhh it worked :)) </span>
