--- a/Project 4.html
+++ b/Project 4.html
@@ -106,10 +106,12 @@ I thought of 2 things to help with this: squish and grip. Only a small amount of
 
 </p>
 <p>
-Specifically, I think it would make sense to use a similar grip tape to the one that my contact staff uses. It’s squishy, going about as far out as my final sketches show, and it’s also relatively grippy. It’s not outright rubbery, but feels similar to a human palm. Here is a (rather low res) image of it:
-</p>
+Specifically, I think it would make sense to use a similar grip tape to the one that my contact staff uses. It’s squishy, going about as far out as my final sketches show, and it’s also relatively grippy. It’s not outright rubbery, but feels similar to a human palm. Here is a (rather low res) image of it:                             
+</p> 
 <p>
    <a href="#!"><img class="img-fluid" src="assets/img/5 foam.jpg" alt="..." /></a>
+      <span class="caption text-muted">Three piece contact staff with foam padding </span>
+
    
 </p> 
 <p>
